# tokmd-swarm

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GEMINI.md  Justfile  LICENSE-MIT  PR_DRAIN.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  TODO.md  _typos.toml  action.yml  codecov.yml  deny.toml  flake.nix  plan.md  pr_body.md  pr_body.txt  proptest.toml  receipts.md  ripr.toml
crates/tokmd-analysis-types/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-analysis-types/src/: archetype.rs  assets.rs  baseline.rs  complexity.rs  effort.rs  findings.rs  fun.rs  imports.rs  lib.rs  supply.rs
crates/tokmd-analysis-types/tests/: analysis_types_depth_w56.rs  analysis_types_depth_w61.rs  baseline.rs  baseline_fallback.rs  coverage_expansion.rs  feature_stability_w53.rs  proptest_w69.proptest-regressions  schema_compliance_w53.rs  schema_contract.rs  schema_contract_w66.rs  schema_validation.rs  serde_compat_v2.rs
crates/tokmd-core/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-core/src/: ffi.rs  lib.rs  mutation_tests.rs  receipts.rs  settings.rs  tests.rs
crates/tokmd-core/tests/: archive_host_receipt_parity.rs  archive_zip_bytemode.rs  archive_zip_ffi_bytemode.rs  bindings_parity.rs  cockpit_workflow.rs  core_deep_w64.rs  core_depth_w57.rs  core_determinism_w53.rs  cross_crate_pipeline.rs  deep_core_round2_w51.rs  deep_w38.rs  deep_w67.rs  error_boundary.rs  error_w70.rs  facade_properties.rs  ffi_boundaries.rs  ffi_contract.rs  ffi_deep.rs  ffi_deep_w77.rs  ffi_expansion.rs  ffi_fixture_deep.rs  ffi_in_memory_w81.rs  ffi_parity_w53.rs  ffi_w43.rs  in_memory_w80.rs  integration_pipeline.rs  integration_w73.rs  json_api.rs  pipeline_integration.rs  pipeline_w40.rs  proptest_expansion_w50.rs  workflow_deep.rs  workflow_robustness_w53.rs  workflows.rs
crates/tokmd-envelope/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-envelope/src/: artifact.rs  capability.rs  findings.rs  gate.rs  lib.rs
crates/tokmd-envelope/tests/: contract_expansion.rs  contract_hardening.rs  deep.rs  deep2.rs  deep_envelope_round2_w52.rs  deep_envelope_w48.rs  deep_w39.rs  deep_w67.rs  envelope_depth_w63.rs  envelope_integration_w74.rs  exhaustive_w72.rs  feature_stability_w53.rs  ffi_bdd.rs  ffi_deep.rs  ffi_deep_coverage.rs  ffi_deep_w43.rs  ffi_deep_w49.rs  ffi_deep_w69.rs  ffi_depth_w61.rs  ffi_envelope_w77.rs  ffi_integration.rs  ffi_properties.rs  ffi_proptest_w53.rs  ffi_schema_compliance_w53.rs  ffi_schema_contract_w66.rs  integration.rs  properties.rs  proptest_w40.rs  proptest_w53.rs  schema_compliance_w53.rs  schema_contract_w66.rs  serde_w70.rs
crates/tokmd-format/: Cargo.toml  README.md
crates/tokmd-format/proptest-regressions/: lib.txt
crates/tokmd-format/src/: diff.rs  export.rs  lib.rs  packet_siblings.rs  summary.rs  tokmd_packets.rs
crates/tokmd-format/tests/: analysis_format.rs  analysis_html.rs  bdd.rs  bdd_rendering.rs  deep_format_w47.rs  deep_w38.rs  deep_w67.rs  determinism_w40.rs  determinism_w42.rs  determinism_w66.rs  diff_deep.rs  edge_w76.rs  error_cases.rs  export_deep.rs  feature_stability_w53.rs  format_contract_w64.rs  format_depth_w58.rs  format_depth_w63.rs  format_roundtrip_w52.rs  format_snapshot_w58.rs  format_tests.rs  fun_bdd.rs  fun_coverage.rs  fun_deep.rs  fun_deep2.rs  fun_deep_w42.rs  fun_deep_w45.rs  fun_deep_w69.rs  fun_eco_label_w59.rs  fun_midi_edge_w59.rs  fun_mutant_tests.rs  fun_outputs_w54.rs  fun_properties.proptest-regressions  fun_properties.rs  fun_properties_w59.rs  fun_snapshot.rs  fun_snapshot_w40.rs  fun_snapshot_w50.rs  fun_snapshot_w70.rs  fun_snapshots.rs  (+20 more)
crates/tokmd-gate/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-gate/src/: evaluate.rs  pointer.rs  ratchet.rs  types.rs
crates/tokmd-gate/tests/: deep.rs  deep_gate_round2_w51.rs  deep_gate_w47.rs  deep_w42.rs  deep_w66.rs  edge_cases.rs  error_boundary.rs  error_cases.rs  error_handling.rs  error_w70.rs  fuzz_w73.rs  gate_deep_w64.rs  gate_deep_w75.rs  gate_depth_w57.rs  gate_depth_w60.rs  gate_error_handling_w54.rs  integration.rs  policy_deep.rs  policy_w68.rs  properties.proptest-regressions  properties.rs  proptest_deep.rs  proptest_expansion_w50.rs  proptest_w72.rs
crates/tokmd-git/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-git/src/: command.rs  intent.rs  lib.rs  refs.rs
crates/tokmd-git/tests/: bdd.rs  bdd_extended.rs  boundary_w53.rs  deep.rs  deep_git_w48.rs  deep_w43.rs  deep_w70.rs  git_contract_w64.rs  git_depth_w60.rs  git_w74.rs  integration.rs  properties.rs
crates/tokmd-io-port/: Cargo.toml  README.md
crates/tokmd-io-port/src/: archive.rs  lib.rs
crates/tokmd-io-port/tests/: deep_w69.rs  integration_w66.rs  io_port_deep_w76.rs  memfs_bdd.rs  readfs_contract.rs  repo_snapshot.rs
crates/tokmd-model/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-model/examples/: bench_normalize.rs
crates/tokmd-model/src/: aggregate.rs  children.rs  lib.rs  rows.rs
crates/tokmd-model/tests/: aggregate_test.rs  bdd.rs  bdd_expanded.rs  bdd_normalize_path.rs  deep.rs  deep_model_w49.rs  deep_w38.rs  deep_w67.rs  determinism_w40.rs  (+16 more)
crates/tokmd-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/tokmd-python/: Cargo.toml  README.md  pyproject.toml
crates/tokmd-scan/: CLAUDE.md  Cargo.toml
crates/tokmd-sensor/: CLAUDE.md  Cargo.toml  README.md
crates/tokmd-settings/: Cargo.toml  README.md
crates/tokmd-wasm/: Cargo.toml  LICENSE-APACHE
fuzz/: .gitignore  Cargo.toml  README.md  build.rs
fuzz/dict/: entropy.dict  json.dict  path.dict  policy.dict  toml.dict
fuzz/fuzz_targets/: fuzz_badge_svg.rs  fuzz_context_policy.rs  fuzz_entropy.rs  fuzz_exclude_pattern.rs  fuzz_export_tree.rs  fuzz_ffi_envelope.rs  fuzz_gate_ratchet.rs  fuzz_import_parser.rs  fuzz_json_pointer.rs  fuzz_json_types.rs  fuzz_math_stats.rs  fuzz_module_key.rs  fuzz_normalize_path.rs  fuzz_policy_evaluate.rs  fuzz_policy_toml.rs  fuzz_redact.rs  fuzz_run_json.rs  fuzz_scan_args.rs  fuzz_toml_config.rs
(+1862 files in other folders)
