[package]
name = "tokmd-analysis-types"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Analysis receipt contracts for tokmd."
readme = "README.md"
keywords = ["code-analysis", "metrics", "receipts", "schema", "serde"]
categories = ["development-tools", "data-structures"]
documentation = "https://docs.rs/tokmd-analysis-types"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokmd-envelope.workspace = true
tokmd-types.workspace = true

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.91"

[dev-dependencies]
chrono = "0.4.44"
proptest.workspace = true
tokmd-scan = { path = "../tokmd-scan", version = ">=1.9, <2" }
