[package]
name = "tokmd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "High-level API façade for tokmd. The recommended entry point for library usage."
readme = "README.md"
keywords = ["code-analysis", "api", "inventory", "receipts", "tokei"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-core"

[features]
default = []
git = ["dep:tokmd-git"]
analysis = [
    "tokmd-analysis-types",
    "dep:tokmd-analysis",
    "tokmd-analysis/git",
    "tokmd-analysis/walk",
    "tokmd-analysis/content",
    "tokmd-analysis/effort",
    "tokmd-analysis/fun",
    "tokmd-analysis/archetype",
    "tokmd-analysis/halstead",
    "tokmd-analysis/topics",
]
cockpit = ["dep:tokmd-cockpit", "dep:tokmd-git"]
# Feature propagation for fun formats (OBJ/MIDI)
fun = ["tokmd-format/fun"]
# Byte-mode archive ingestion: propagates the tokmd-scan ZIP codec adapter so
# untrusted ZIP bytes can be admitted fail-closed and routed through the
# existing in-memory workflows. The default surface stays decompression-free.
# See docs/specs/wasm-ffi-byte-mode.md and docs/specs/repo-snapshot.md.
archive-zip = ["tokmd-scan/archive-zip"]

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
serde.workspace = true
serde_json.workspace = true
tokmd-format.workspace = true
tokmd-settings.workspace = true
tokmd-model.workspace = true
tokmd-scan.workspace = true
tokmd-types.workspace = true

# Optional analysis support (Tier 3 facade re-exports for Tier 5 products)
# See analysis_facade module in lib.rs and ADR-001 for architectural rationale
tokmd-analysis = { workspace = true, optional = true }
tokmd-analysis-types = { workspace = true, optional = true }

# Optional cockpit support
tokmd-cockpit = { workspace = true, optional = true }
tokmd-git = { workspace = true, optional = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.91"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
# Test-only ZIP writer for the byte-mode (archive-zip) parity test. Mirrors the
# io-port/scan codec pin (deflate-only, default features off) to keep the test
# trust surface minimal; only used by the `archive-zip`-gated parity test.
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
