[package]
name = "tokmd-format"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Output formatting and serialization (Markdown, JSON, CSV) for tokmd."
readme = "README.md"
keywords = ["formatting", "markdown", "json", "csv", "serialization"]
categories = ["development-tools", "encoding"]
documentation = "https://docs.rs/tokmd-format"

[features]
default = []
fun = ["dep:midly"]

[dependencies]
anyhow.workspace = true
csv = "1.4.0"
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
midly = { version = "0.5.3", optional = true }
time = { version = "0.3.47", features = ["formatting", "macros"] }
uuid = { version = "1.23", features = ["v4"] }
tokmd-analysis-types.workspace = true
tokmd-settings.workspace = true
tokmd-types.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.23", features = ["v4", "js"] }

[dev-dependencies]
proptest.workspace = true
insta = { workspace = true }
tempfile.workspace = true
