[package]
name = "tokmd-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Policy evaluation engine for tokmd analysis receipts"
documentation = "https://docs.rs/tokmd-gate"
readme = "README.md"
keywords = ["policy", "ci", "gate", "analysis"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml = "1.1.2"

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true


