[package]
name = "tokmd-git"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Streaming git log adapter for tokmd analysis."
readme = "README.md"
keywords = ["git", "history", "commits", "streaming", "code-analysis"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-git"

[dependencies]
anyhow.workspace = true
tokmd-types.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true


