[package]
name = "tokmd-io-port"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "I/O port traits for host-abstracted file access, enabling WASM targets."
readme = "README.md"
keywords = ["io", "wasm", "abstraction", "filesystem", "adapter"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-io-port"

[features]
# Archive ingestion admission engine (path-safety + zip-bomb resource limits).
# Carries ZERO decompression dependencies: this gate exposes the fail-closed
# entry-admission core only. A concrete codec adapter (e.g. `snapshot_from_zip_bytes`)
# is a deferred follow-up that selects and pins an audited archive crate via a
# dedicated dependency-maintenance PR. See docs/specs/repo-snapshot.md.
archive = []

[dependencies]

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
