[package]
publish = false
name = "tokmd-node"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Node.js bindings for tokmd - code inventory and analytics"
readme = "README.md"
keywords = ["code-analysis", "nodejs", "bindings", "napi", "tokei"]
categories = ["development-tools::ffi"]
# This crate produces a native Node.js addon, not a crates.io library

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["async", "serde-json"] }
napi-derive = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json.workspace = true
serde.workspace = true
tokmd-core = { workspace = true, features = ["analysis", "cockpit"] }
tokmd-envelope.workspace = true

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile.workspace = true
