[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tokmd"
dynamic = ["version"]
description = "Code inventory receipts and analytics - Python bindings"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Steven Zimmerman", email = "git@effortlesssteven.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["code-analysis", "loc", "tokei", "inventory", "analytics"]

[project.urls]
Homepage = "https://github.com/EffortlessMetrics/tokmd"
Documentation = "https://github.com/EffortlessMetrics/tokmd#readme"
Repository = "https://github.com/EffortlessMetrics/tokmd"
Changelog = "https://github.com/EffortlessMetrics/tokmd/blob/main/CHANGELOG.md"

[tool.maturin]
features = ["extension-module"]
python-source = "python"
module-name = "tokmd._tokmd"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
