[package]
name = "tokmd-scan"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Source code scanning adapter (Tokei wrapper) for tokmd."
readme = "README.md"
keywords = ["code-analysis", "tokei", "loc", "scanning", "lines-of-code"]
categories = ["development-tools"]
documentation = "https://docs.rs/tokmd-scan"

[dependencies]
anyhow.workspace = true
ignore = "0.4.25"
tempfile.workspace = true
tokei = { version = "14.0.0", default-features = false }
tokmd-io-port.workspace = true
tokmd-settings.workspace = true
tokmd-types.workspace = true

[dev-dependencies]
proptest.workspace = true
tokmd-model = { path = "../tokmd-model", version = ">=1.9, <2" }
